--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -11,5 +11,15 @@
     <script src="{% static 'frontend/main.js' %}"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/github-corners@latest/dist/embed.min.js" data-href="https://github.com/mnamegaurav" data-target="_blank" data-label="Checkout the Github Repo!"></script>
+    <style>
+      .github-corner > svg {
+        fill: #000;
+        right: 0;
+        top: 0;
+        transform: scale(1, 1);
+        position: fixed;
+      }
+    </style>
 </body>
 </html>
